<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|end"
    android:layout_weight="10"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
         android:text="@string/onboarding_title_msg"
        android:textColor="@color/endavaOrange"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:onClick="launchBeacons"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="169dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:src="@drawable/undraw_teaching_f1cm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:paddingRight="10dp"
            android:text="@string/onboarding_meet_manager_msg"
            android:textColor="@color/endavaOrange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="154dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:src="@drawable/undraw_team_spirit_hrr4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp"
            android:text="@string/onboarding_meet_team_msg"
            android:textColor="@color/endavaOrange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:src="@drawable/undraw_Building_vpxo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp"
            android:text="@string/onboarding_office_tour_msg"
            android:textColor="@color/endavaOrange" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="166dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:src="@drawable/undraw_noted_pc9f" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp"
            android:text="@string/onboarding_ITS_msg"
            android:textColor="@color/endavaOrange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="256dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:src="@drawable/undraw_coffee_break_j3of" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="30dp"
            android:text="@string/onboarding_CC_msg"
            android:textColor="@color/endavaOrange" />
    </LinearLayout>

</LinearLayout>