<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|end"
    android:layout_weight="10"
    android:background="@color/bgColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="100dp"
        android:paddingRight="16dp"
        android:text="@string/journeys_title_msg"
        android:textColor="@color/endavaOrange"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/findColleagueMainOption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/findColleagueImg"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:src="@drawable/undraw_goals_w8tw" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/findColleagueImg"
                    android:gravity="center"
                    android:text="@string/journeys_tech_msg"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/findWayAroundMainOption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mapImg"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:src="@drawable/undraw_map_1r69" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mapImg"
                    android:gravity="center"
                    android:text="@string/journeys_map_msg"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>